<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/general_appbar">

    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_launcher" android:layout_margin="15dp"
                    />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/tvHowToUseQuickuCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tv_how_to_use_quicku"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvHowToUseQuickuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:text="@string/tv_how_to_use_quicku_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/tvWhichLanguagesSupportedCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tv_which_languages_supported"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvWhichLanguagesSupportedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:text="@string/tv_which_languages_supported_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />


            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
