<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:weightSum="100">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:background="@android:color/transparent">


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:id="@+id/rlResultCard"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/translate_result_card_1">

            <TextView
                android:id="@+id/tvTranslateResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPoweredByYandex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/tv_powered_by_yandex"
                android:textColor="@color/colorGrey"
                android:textSize="12sp" />


        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:id="@+id/rlErrorArea"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/translate_result_card_3">

            <TextView
                android:id="@+id/tvErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/toast_same_word_check_settings"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnErrorOpenSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/translate_result_card_2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/btn_ok"
                android:textColor="@color/colorWhite" />


        </RelativeLayout>


    </RelativeLayout>


</LinearLayout>
