<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/general_appbar">

    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20">

            <TextView
                android:id="@+id/tvTranslateLangInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tv_translate_lang_info"
                android:textColor="@color/smooth_text_black"
                android:textSize="16sp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15">


                <CheckBox
                    android:id="@+id/cbAutoDetectTargetLang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="85">

                <TextView
                    android:id="@+id/tvAutoDetectTargetLangInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="left"
                    android:text="@string/tv_auto_detect_source_lang_info"
                    android:textColor="@color/smooth_text_black"
                    android:textSize="16sp" />


            </RelativeLayout>


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llSourceLangSettingContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="35">

                    <TextView
                        android:id="@+id/tvSetSourceLangCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/tv_set_source_lang_caption"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="65">


                    <Spinner
                        android:id="@+id/spinnerSourceLang"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/spinner_active">


                    </Spinner>


                </RelativeLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="35">

                    <TextView
                        android:id="@+id/tvSetTargetLangCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/tv_set_target_lang_caption"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="65">

                    <Spinner
                        android:id="@+id/spinnerTargetLang"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/spinner_active">


                    </Spinner>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_powered_by_yandex"
                        android:id="@+id/tvPoweredByYandex"
                        android:textSize="16sp"
                        android:textColor="@color/smooth_text_black"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true" />


                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
