<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/general_appbar">

    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rlCardThemes"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tvSettingsCardThemes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tv_settings_theme"
                    android:textColor="@color/smooth_text_black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_hardware_keyboard_arrow_right" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@color/colorGrey" />

            <RelativeLayout
                android:id="@+id/rlTranslateLanguage"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tvSettingsTranslateLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tv_settings_translate_language"
                    android:textColor="@color/smooth_text_black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_hardware_keyboard_arrow_right" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@color/colorGrey" />


            <RelativeLayout
                android:id="@+id/rlClearHistory"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tvSettingsClearHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tv_settings_clear_history"
                    android:textColor="@color/smooth_text_black"
                    android:textSize="16sp" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@color/colorGrey" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
